--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -39,14 +39,17 @@
   transition: all 0.3s;
 }
 
-li.active .style-a::after{
-  width: 70%;
-}
-
 li:hover .style-a::after{
   width: 70%;
 }
 
+li.active .style-a::after{
+  content: "";
+  width: 70%;
+  display: block;
+  height: 2px;
+  background-color: red;
+}
 
 .nav-pills .nav-link.active {
   color: black;
